2000-06-02  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.c: added functions for getting cell types
	and getting the locations for cell types.

	* src/SplitLedger.c: add functionality for auto-completion

2000-06-02  Rob Browning  <rlb@cs.utexas.edu>

	* quite a few bugfixes to the automake stuff.

	* guid-md5.* -> md5.* - Dave liked this better, and I did too.

	* src/register/gnome/* - restored ... for now.
	
2000-06-01  Rob Browning  <rlb@cs.utexas.edu>

	* README: many mods to accomodate new changes, but still unfinished.

	* configure.in: --with-opt-style-install changed to
	--enable-opt-style-install

2000-05-31  Rob Browning  <rlb@cs.utexas.edu>

	* Giant automake switchover.
	doc/html/*/pix/ -> doc/html/*/image/
	intl/* - new directory/contents (filled via gettextize).
	src/doc - new directory to collect src docs.
	src/experimental - new directory.
	src/gg -> src/experimental/gg
	src/cbb -> src/experimental/cbb
	src/optional - new directory for configure --with and --enable bits.
	src/swig -> src/optional/swig - preparation for new quoting system.
	src/swig/perl5 deleted - swig is now just in a single directory.
	src/reports/File.c -> src/guile/File.c
	src/register/gnome/* -> src/register/* - automake wants flat lib dirs. 
	src/qt deleted - docs indicate how to get it if you want it.
	src/motif deleted - docs indicate how to get it if you want it.
	src/g-wrap merged into src/guile.
	src/engine/guid/* -> src/engine - automake wants flat lib dirs.
	man/* -> doc/
	lib/* deleted - nothing needed right now; see lib/README.
	gnucash.gdb-cmds -> doc/
	gnucash.desktop -> src/gnome/
	gnucash deleted - see doc/README.build-system
	etc/config -> src/guile/config
	doc/html/logos/ -> doc/html/C/logos - this should handle intl better.
	doc/build-system -> doc/README.build-system
	doc/aix.txt -> doc/build-aix.txt
	doc/SuSE-6.3.txt -> doc/build-suse.txt
	doc/solaris.txt -> doc/build-solaris.txt
	doc/README -> README - as per GNU coding/automake standards.