@@ -1,5 +1,0 @@
-Makefile
-tmp
-obj
-g-wrap-install
-g-wrap.configure
