@@ -1,3 +1,1 @@
 Makefile
-tmp
-obj
